--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@trpc/server": "^11.0.0-rc.340",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.367.0",
     "next": "14.1.4",
     "node": "^18.20.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.5"
